src/ParserPackage/just.java
/* Generated By:JavaCC: Do not edit this line. just.java */
package ParserPackage;
import java.io.*;

public class just implements justConstants {
  static SymbolTable mySymbols = new SymbolTable();

  public static void main(String args []) throws ParseException, Exception
  {

        just parser = new just(new java.io.FileInputStream (args[0]));
    //just parser = new just(System.in);

          System.out.println("Reading from standard input...");
          System.out.print("Enter an Just synatax  :");
          try
          {
            switch (just.one_line())
            {
              case 0 :
              System.out.println("OK.");
              break;
              case 1 :
              System.out.println("Goodbye.");
              break;
              default :
              break;
            }
          }
          catch (Exception e)
          {
            System.out.println("NOK.");
            System.out.println(e.getMessage());
            just.ReInit(System.in);
          }
          catch (Error e)
          {
            System.out.println("Oops.");
            System.out.println(e.getMessage());
          }
          mySymbols.printList();
  }

  static final public int one_line() throws ParseException {
    firstExpression();
    {if (true) return 1;}
    throw new Error("Missing return statement in function");
  }

  static final public void firstExpression() throws ParseException {
        Token myToken;
        Token type;
    type = jj_consume_token(PROGRAM);
    myToken = jj_consume_token(IDENT);
    jj_consume_token(LGESCHWEIFT);
    programmCode();
    jj_consume_token(RGESCHWEIFT);
                mySymbols.add(myToken, type);
  }

  static final public void programmCode() throws ParseException {
    defintion();
  }

/*Block = "{" { VarDef| Stat} "}".*/
  static final public void block() throws ParseException {
    jj_consume_token(LGESCHWEIFT);
    label_1:
    while (true) {
      if (jj_2_1(3)) {
        ;
      } else {
        break label_1;
      }
      if (jj_2_2(3)) {
        varDef();
      } else if (jj_2_3(3)) {
        statement();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(RGESCHWEIFT);
  }

/*Definition= { VarDef| FuncDef}.*/
  static final public void defintion() throws ParseException {
    label_2:
    while (true) {
      if (jj_2_4(3)) {
        ;
      } else {
        break label_2;
      }
      if (jj_2_5(3)) {
        varDef();
      } else if (jj_2_6(3)) {
        funcDef();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

/* FuncDef =FuncHeadBlock.*/
  static final public void funcDef() throws ParseException {
    funcHead();
    block();
  }

/*FuncHead = Type ident "(" [ FormParList] ")".*/
  static final public void funcHead() throws ParseException {
        Token type, ident;
    type = jj_consume_token(TYPE);
    ident = jj_consume_token(IDENT);
    jj_consume_token(RLKLAMMER);
    if (jj_2_7(3)) {
      formParList();
    } else {
      ;
    }
    jj_consume_token(RRKLAMMER);
    mySymbols.add(ident, type);
  }

/*FormParList = ["byref"] Type ident{"," ["byref"] Type ident}.*/
  static final public void formParList() throws ParseException {
        Token type, ident, byRef;
        Token type2 = null, ident2 =null, byRef2 =null;
    if (jj_2_8(3)) {
      byRef = jj_consume_token(BYREF);
    } else {
      ;
    }
    type = jj_consume_token(TYPE);
    ident = jj_consume_token(IDENT);
    label_3:
    while (true) {
      if (jj_2_9(3)) {
        ;
      } else {
        break label_3;
      }
      jj_consume_token(KOMMA);
      if (jj_2_10(3)) {
        byRef2 = jj_consume_token(BYREF);
      } else {
        ;
      }
      type2 = jj_consume_token(TYPE);
      ident2 = jj_consume_token(IDENT);
    }
    mySymbols.add(ident, type);
    if(ident2.image != null && type2.image != null)
    {
        mySymbols.add(ident2, type2);
    }

    // TODO:  byref erweitern 

  }

/*ident "=" Expr";".*/
  static final public void assignStat() throws ParseException {
    jj_consume_token(IDENT);
    jj_consume_token(EQUALS);
    expr();
    jj_consume_token(SEMI);
  }

  static final public void expr() throws ParseException {
    orExpr();
  }

/*OrExpr = AndExpr{ "||" AndExpr}.*/
  static final public void orExpr() throws ParseException {
    andExpr();
    label_4:
    while (true) {
      if (jj_2_11(3)) {
        ;
      } else {
        break label_4;
      }
      jj_consume_token(OR);
      andExpr();
    }
  }

/*AndExpr = RelExpr{ "&&" RelExpr}.*/
  static final public void andExpr() throws ParseException {
    relExpr();
    label_5:
    while (true) {
      if (jj_2_12(3)) {
        ;
      } else {
        break label_5;
      }
      jj_consume_token(KAUFUND);
      relExpr();
    }
  }

/*RelExpr = SimpleExpr[ ("==" | "!=" | "<" | "<=" | ">" | ">=") SimpleExpr].*/
  static final public void relExpr() throws ParseException {
    simpleExpr();
    if (jj_2_19(3)) {
      if (jj_2_13(3)) {
        jj_consume_token(GLEICHGLEICH);
      } else if (jj_2_14(3)) {
        jj_consume_token(AUSGLEICH);
      } else if (jj_2_15(3)) {
        jj_consume_token(KLEINER);
      } else if (jj_2_16(3)) {
        jj_consume_token(KLEINERGLEICH);
      } else if (jj_2_17(3)) {
        jj_consume_token(GROESSER);
      } else if (jj_2_18(3)) {
        jj_consume_token(GROESSERGLEICH);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      simpleExpr();
    } else {
      ;
    }
  }

/*SimpleExpr = ["+" | "-"] Term { ("+" | "-") Term }.*/
  static final public void simpleExpr() throws ParseException {
    if (jj_2_22(3)) {
      if (jj_2_20(3)) {
        jj_consume_token(PLUS);
      } else if (jj_2_21(3)) {
        jj_consume_token(MINUS);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      ;
    }
    term();
    label_6:
    while (true) {
      if (jj_2_23(3)) {
        ;
      } else {
        break label_6;
      }
      if (jj_2_24(3)) {
        jj_consume_token(PLUS);
      } else if (jj_2_25(3)) {
        jj_consume_token(MINUS);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      term();
    }
  }

  /*Term = NotFact{ ("*" | "/") NotFact}.*/
  static final public void term() throws ParseException {
    notFact();
    label_7:
    while (true) {
      if (jj_2_26(3)) {
        ;
      } else {
        break label_7;
      }
      if (jj_2_27(3)) {
        jj_consume_token(MAL);
      } else if (jj_2_28(3)) {
        jj_consume_token(DIV);
        notFact();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

/*NotFact = ["!"] Fact.*/
  static final public void notFact() throws ParseException {
    if (jj_2_29(3)) {
      jj_consume_token(AUSRUF);
    } else {
      ;
    }
    fact();
  }

/*Fact = number | ident["(" [ ActParList] ")" ] | "(" Expr")".*/
  static final public void fact() throws ParseException {
    if (jj_2_32(3)) {
      jj_consume_token(NUMBER);
    } else if (jj_2_33(3)) {
      jj_consume_token(IDENT);
      if (jj_2_31(3)) {
        jj_consume_token(RLKLAMMER);
        if (jj_2_30(3)) {
          actParList();
        } else {
          ;
        }
        jj_consume_token(RRKLAMMER);
      } else {
        ;
      }
    } else if (jj_2_34(3)) {
      jj_consume_token(RLKLAMMER);
      expr();
      jj_consume_token(RRKLAMMER);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/*CallStat = Call ";".*/
  static final public void callStat() throws ParseException {
    call();
    jj_consume_token(SEMI);
  }

/*Call = ident "(" [ ActParList] ")"*/
  static final public void call() throws ParseException {
    jj_consume_token(IDENT);
    jj_consume_token(RLKLAMMER);
    if (jj_2_35(3)) {
      actParList();
    } else {
      ;
    }
    jj_consume_token(RRKLAMMER);
  }

//Stat = AssignStat| CallStat| IfStat| WhileStat| ReturnStat| Block | ";".
  static final public void statement() throws ParseException {
    if (jj_2_36(3)) {
      assignStat();
    } else if (jj_2_37(3)) {
      ifStat();
    } else if (jj_2_38(3)) {
      whileState();
    } else if (jj_2_39(3)) {
      returnStat();
    } else if (jj_2_40(3)) {
      callStat();
    } else if (jj_2_41(3)) {
      block();
    } else if (jj_2_42(3)) {
      jj_consume_token(SEMI);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/*ActParList = Expr{ "," Expr}.*/
  static final public void actParList() throws ParseException {
    expr();
    label_8:
    while (true) {
      if (jj_2_43(3)) {
        ;
      } else {
        break label_8;
      }
      jj_consume_token(KOMMA);
      expr();
    }
  }

//IfStat = "if" "(" Expr ")" Stat [ "else" Stat ].
  static final public void ifStat() throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(RLKLAMMER);
    expr();
    jj_consume_token(RRKLAMMER);
    statement();
    if (jj_2_44(3)) {
      jj_consume_token(ELSE);
      statement();
    } else {
      ;
    }
  }

/*"while" "(" Expr")" Stat.*/
  static final public void whileState() throws ParseException {
    jj_consume_token(WHILE);
    jj_consume_token(RLKLAMMER);
    expr();
    jj_consume_token(RRKLAMMER);
    statement();
  }

/*ReturnStat = "return" [ Expr] ";" .*/
  static final public void returnStat() throws ParseException {
    jj_consume_token(RETURN);
    if (jj_2_45(3)) {
      expr();
    } else {
      ;
    }
    jj_consume_token(SEMI);
  }

/*VarDef = Type ident[ Init] ";".*/
  static final public void varDef() throws ParseException {
        Token ident, type;
    type = jj_consume_token(TYPE);
    ident = jj_consume_token(IDENT);
    if (jj_2_46(3)) {
      init();
    } else {
      ;
    }
    jj_consume_token(SEMI);
          mySymbols.add(ident, type);
  }

/*Init = "=" number.*/
  static final public void init() throws ParseException {
    jj_consume_token(EQUALS);
    jj_consume_token(NUMBER);
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  static private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  static private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  static private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  static private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  static private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  static private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  static private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  static private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  static private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  static private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  static private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  static private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  static private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  static private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  static private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  static private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  static private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  static private boolean jj_2_30(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  static private boolean jj_2_31(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  static private boolean jj_2_32(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  static private boolean jj_2_33(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_33(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  static private boolean jj_2_34(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_34(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  static private boolean jj_2_35(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_35(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  static private boolean jj_2_36(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_36(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(35, xla); }
  }

  static private boolean jj_2_37(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_37(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(36, xla); }
  }

  static private boolean jj_2_38(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_38(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(37, xla); }
  }

  static private boolean jj_2_39(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_39(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(38, xla); }
  }

  static private boolean jj_2_40(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_40(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(39, xla); }
  }

  static private boolean jj_2_41(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_41(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(40, xla); }
  }

  static private boolean jj_2_42(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_42(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(41, xla); }
  }

  static private boolean jj_2_43(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_43(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(42, xla); }
  }

  static private boolean jj_2_44(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_44(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(43, xla); }
  }

  static private boolean jj_2_45(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_45(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(44, xla); }
  }

  static private boolean jj_2_46(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_46(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(45, xla); }
  }

  static private boolean jj_3R_23() {
    if (jj_scan_token(RETURN)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_45()) jj_scanpos = xsp;
    if (jj_scan_token(SEMI)) return true;
    return false;
  }

  static private boolean jj_3_16() {
    if (jj_scan_token(KLEINERGLEICH)) return true;
    return false;
  }

  static private boolean jj_3_43() {
    if (jj_scan_token(KOMMA)) return true;
    if (jj_3R_19()) return true;
    return false;
  }

  static private boolean jj_3_30() {
    if (jj_3R_18()) return true;
    return false;
  }

  static private boolean jj_3R_22() {
    if (jj_scan_token(WHILE)) return true;
    if (jj_scan_token(RLKLAMMER)) return true;
    if (jj_3R_19()) return true;
    return false;
  }

  static private boolean jj_3_35() {
    if (jj_3R_18()) return true;
    return false;
  }

  static private boolean jj_3_37() {
    if (jj_3R_21()) return true;
    return false;
  }

  static private boolean jj_3_3() {
    if (jj_3R_10()) return true;
    return false;
  }

  static private boolean jj_3_8() {
    if (jj_scan_token(BYREF)) return true;
    return false;
  }

  static private boolean jj_3R_12() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_8()) jj_scanpos = xsp;
    if (jj_scan_token(TYPE)) return true;
    if (jj_scan_token(IDENT)) return true;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_9()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3R_21() {
    if (jj_scan_token(IF)) return true;
    if (jj_scan_token(RLKLAMMER)) return true;
    if (jj_3R_19()) return true;
    return false;
  }

  static private boolean jj_3R_18() {
    if (jj_3R_19()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_43()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3_15() {
    if (jj_scan_token(KLEINER)) return true;
    return false;
  }

  static private boolean jj_3_25() {
    if (jj_scan_token(MINUS)) return true;
    return false;
  }

  static private boolean jj_3_31() {
    if (jj_scan_token(RLKLAMMER)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_30()) jj_scanpos = xsp;
    if (jj_scan_token(RRKLAMMER)) return true;
    return false;
  }

  static private boolean jj_3_1() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_2()) {
    jj_scanpos = xsp;
    if (jj_3_3()) return true;
    }
    return false;
  }

  static private boolean jj_3_2() {
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_3R_27() {
    if (jj_scan_token(TYPE)) return true;
    if (jj_scan_token(IDENT)) return true;
    if (jj_scan_token(RLKLAMMER)) return true;
    return false;
  }

  static private boolean jj_3_6() {
    if (jj_3R_11()) return true;
    return false;
  }

  static private boolean jj_3R_10() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_36()) {
    jj_scanpos = xsp;
    if (jj_3_37()) {
    jj_scanpos = xsp;
    if (jj_3_38()) {
    jj_scanpos = xsp;
    if (jj_3_39()) {
    jj_scanpos = xsp;
    if (jj_3_40()) {
    jj_scanpos = xsp;
    if (jj_3_41()) {
    jj_scanpos = xsp;
    if (jj_3_42()) return true;
    }
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3_36() {
    if (jj_3R_20()) return true;
    return false;
  }

  static private boolean jj_3_24() {
    if (jj_scan_token(PLUS)) return true;
    return false;
  }

  static private boolean jj_3_28() {
    if (jj_scan_token(DIV)) return true;
    if (jj_3R_17()) return true;
    return false;
  }

  static private boolean jj_3_14() {
    if (jj_scan_token(AUSGLEICH)) return true;
    return false;
  }

  static private boolean jj_3_23() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_24()) {
    jj_scanpos = xsp;
    if (jj_3_25()) return true;
    }
    if (jj_3R_16()) return true;
    return false;
  }

  static private boolean jj_3_33() {
    if (jj_scan_token(IDENT)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_31()) jj_scanpos = xsp;
    return false;
  }

  static private boolean jj_3R_30() {
    if (jj_scan_token(IDENT)) return true;
    if (jj_scan_token(RLKLAMMER)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_35()) jj_scanpos = xsp;
    if (jj_scan_token(RRKLAMMER)) return true;
    return false;
  }

  static private boolean jj_3R_24() {
    if (jj_3R_30()) return true;
    return false;
  }

  static private boolean jj_3R_11() {
    if (jj_3R_27()) return true;
    return false;
  }

  static private boolean jj_3_4() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_5()) {
    jj_scanpos = xsp;
    if (jj_3_6()) return true;
    }
    return false;
  }

  static private boolean jj_3_5() {
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_3R_25() {
    if (jj_scan_token(LGESCHWEIFT)) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_1()) { jj_scanpos = xsp; break; }
    }
    if (jj_scan_token(RGESCHWEIFT)) return true;
    return false;
  }

  static private boolean jj_3_26() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_27()) {
    jj_scanpos = xsp;
    if (jj_3_28()) return true;
    }
    return false;
  }

  static private boolean jj_3_27() {
    if (jj_scan_token(MAL)) return true;
    return false;
  }

  static private boolean jj_3_10() {
    if (jj_scan_token(BYREF)) return true;
    return false;
  }
